task list color fixes on small screens

--- a/pages/projects/projects.scss
+++ b/pages/projects/projects.scss
@@ -73,6 +73,8 @@
 
       @media only screen and (max-width: 600px) {
         font-size: 2rem;
+        color: #164bdb;
+        border-color: #164bdb;
       }
 
       &:hover {
@@ -193,6 +195,8 @@
 
           @media only screen and (max-width: 600px) {
             font-size: 2rem;
+            color: #00ca00;
+            border-color: #00ca00;
           }
 
           i {
@@ -217,6 +221,8 @@
 
           @media only screen and (max-width: 600px) {
             font-size: 2rem;
+            color: red;
+            border-color: red;
           }
 
           i {
